<resources>
    <string name="app_name">WhatsApp</string>
    <string name="hello_blank_fragment">Olá fragmento</string>
    <string name="login_title">Entrar</string>
    <string name="login_subtitle">Digite seus dados para entrar no sistema</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar Senha</string>
    <string name="login">Entrar</string>
    <string name="create_account_link">Criar uma conta</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="message_login_success">Login realizado com sucesso</string>
    <string name="message_forgot_password_success">Um e-mail de recuperação foi enviado para você.</string>
    <string name="login_account_link">Realizar login</string>
    <string name="register">Criar conta</string>
    <string name="register_subtitle">Preencha com seus dados para criar sua conta</string>
    <string name="register_title">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="phone">Celular</string>
    <string name="error_name_required">Nome é obrigatório</string>
    <string name="error_phone_required">Telefone é obrigatório</string>
    <string name="error_phone_length">Telefone precisa ter pelo menos 9 dígitos</string>
    <string name="error_email_required">E-mail é obrigatório</string>
    <string name="error_password_required">Senha é obrigatória</string>
    <string name="error_password_should_be_at_least_6_characters">Senha precisa ter pelo menos 6 caracteres</string>
    <string name="error_password_should_contain_at_least_one_uppercase_letter">Senha deve conter pelo menos uma letra maiúscula, uma letra minúscula, um número e um caractere especial</string>
    <string name="error_email_not_valid">Digite um e-mail válido</string>
    <string name="error_phone_not_valid">Telefone inválido</string>
    <string name="error_password_confirm_required">Confirmar senha é obrigatório</string>
    <string name="error_password_should_be_equal">As senhas não são iguais</string>
    <string name="search_menu">Buscar</string>
    <string name="profile_menu">Perfil</string>
    <string name="logout_menu">Sair</string>
    <string name="contact_name">Nome do contato</string>
    <string name="contact_phone">Telefone</string>
    <string name="gallery_button">Botão de galeria</string>
    <string name="camera_button">Botão de câmera</string>
    <string name="refresh_list">Atualizar</string>
    <string name="update_account">Atualizar</string>
    <string name="default_theme">Padrão</string>
    <string name="light_theme">Claro</string>
    <string name="dark_theme">Escuro</string>
    <string name="select_theme">Selecione um tema:</string>
    <string name="last_message">Última mensagem</string>
    <string name="sendMessageButton">Botão de envio de mensagem</string>
    <string name="sendLocationButton">Botão de envio de localização</string>
    <string name="send_a_message">Envie uma mensagem</string>
    <string name="back_button">Back Button</string>
</resources>