<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <include
        android:id="@+id/include_toobal"
        layout="@layout/toolbar"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/circleImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        android:src="@drawable/padrao"
        app:layout_constraintTop_toBottomOf="@id/include_toobal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleImage"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gallery_button"
        app:srcCompat="@drawable/baseline_photo_library_24"
        android:contentDescription="@string/gallery_button"
        app:fabSize="mini"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimary"
        app:tint="@color/textColorPrimary"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.FullyRounded"
        android:layout_marginTop="-62dp"
        android:translationX="-72dp"
        app:layout_constraintTop_toBottomOf="@id/circleImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera_button"
        app:srcCompat="@drawable/baseline_camera_alt_24"
        android:contentDescription="@string/camera_button"
        app:fabSize="mini"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimary"
        app:tint="@color/textColorPrimary"
        android:layout_marginTop="-60dp"
        android:translationX="72dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.FullyRounded"
        app:layout_constraintTop_toBottomOf="@id/gallery_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutEmail"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textTheme"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutName"/>

    <RadioGroup
        android:id="@+id/theme_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <RadioButton
            android:id="@+id/default_theme"
            android:text="@string/default_theme"
            android:layout_width="0dp"
            android:checked="true"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/light_theme"
            android:text="@string/light_theme"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/dark_theme"
            android:text="@string/dark_theme"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        android:onClick="update"
        android:padding="12dp"
        android:text="@string/update_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_selector" />

</androidx.constraintlayout.widget.ConstraintLayout>